Adicionando a função de selecionar o numero desejado

--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
         <p>Escolha um número de 1 a 1000:</p>
 
         <div id="gridNumeros"></div>
+        <div>
+            <p>Números selecionados: </p>
+            <div id="numerosSelecionados"></div>
+        </div>
     </div>
     <script src="index.js"></script>
 </body>
