Adicionando o valor total a tela

--- a/index.html
+++ b/index.html
@@ -12,11 +12,9 @@
         <p>Escolha um número de 1 a 1000:</p>
 
         <div id="gridNumeros"></div>
-        <div>
-            <p>Números selecionados: </p>
-            <div id="numerosSelecionados"> Nenhum </div>
-        </div>
-     <div>
+        <h2 id="numerosSelecionados">Números selecionados: Nenhum</h2>
+        <h3 id="valorTotal">Valor total: R$ 0,00</h3>
+
         <form id="formCompra">
             <h2>Confirme sua compra</h2>
             <div class="form-group">
