--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h3 id="valorTotal">Valor total: R$ 0,00</h3>
 
         <form id="formCompra">
-            <h2>Informe seus dados</h2>
+            <h2>SEUS DADOS</h2>
             <div class="form-group">
                 <label for="nome">Nome:</label>
                 <input type="text" id="nome" name="nome" placeholder="Seu nome" required>
@@ -47,7 +47,15 @@
                 <input type="tel" id="telefone" name="telefone" placeholder="Seu telefone" required>
             </div>
 
-            <button type="submit">Confirmar Compra</button>
+            <h2>PAGAMENTO</h2>
+            <p>Realize o pagamento através do pix:</p>
+            <h2>ajudeivanaeguiacasar@gmail.com</h2>
+            <div class="avisoPagamento">
+                <h3 style="color: #024da3;">ATENÇÃO:</h3>
+                <p>Só será aceito os pagamentos cujo comprovante for enviado para o WhatsApp: <u style="color: #024da3; font-weight: 700;">82 99636-5716</u> </p>
+            </div>
+            
+            <button type="submit" onclick="confirmarPagamento()">Confirmar Compra</button>
         </form>
     </div>
     </div>
