--- a/sistema-rifa/index.html
+++ b/sistema-rifa/index.html
@@ -60,5 +60,7 @@
     </div>
     </div>
     <script src="index.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore.js"></script>
 </body>
 </html>
