Corrigindo erros de estética

--- a/sistema-rifa/index.html
+++ b/sistema-rifa/index.html
@@ -42,7 +42,7 @@
         </form>
 
     <div class="display-numeros">
-        <h2>Escolha um número de 1 a 1000:</h2>
+        <h2>Escolha um número:</h2>
         <div id="gridNumeros"></div>
     </div>
       
@@ -53,14 +53,14 @@
             <div class="form-group">
                 <h2>PAGAMENTO</h2>
                 <p>Realize o pagamento através do pix:</p>
-                <h2>ajudeivanaeguiacasar@gmail.com</h2>
+                <h3 style="color: #024da3;">ajudeivanaeguiacasar@gmail.com</h3>
                 <div class="avisoPagamento">
                     <h3 style="color: #024da3;">ATENÇÃO:</h3>
                     <p>Só será aceito os pagamentos cujo comprovante for enviado para o WhatsApp: <u style="color: #024da3; font-weight: 700;">82 9636-5716</u> </p>
                 </div>
             </div>
             
-            <button class="confirmButton" onclick="confirmarPagamento()">Confirmar Compra</button>
+            <button class="confirmButton" id="buttonConfirm" onclick="confirmarPagamento()">Confirmar Compra</button>
         </div>
     </div>
     </div>
