Ajustando detalhes da finalização da compra

--- a/sistema-rifa/index.html
+++ b/sistema-rifa/index.html
@@ -60,7 +60,7 @@
                 </div>
             </div>
             
-            <button class="confirmButton" id="buttonConfirm" onclick="confirmarPagamento()">Confirmar Compra</button>
+            <button class="confirmButton" id="buttonConfirm">Confirmar Compra</button>
         </div>
     </div>
     </div>
