Ajustando o alinhamento do texto para o centro

--- a/sistema-rifa/index.html
+++ b/sistema-rifa/index.html
@@ -53,7 +53,7 @@
             <div class="form-group">
                 <h2>PAGAMENTO</h2>
                 <p>Realize o pagamento através do pix:</p>
-                <p style="color: #024da3; font-weight: bold;">ajudeivanaeguiacasar@gmail.com</p>
+                <p style="color: #024da3; font-weight: bold; text-align: center;">ajudeivanaeguiacasar@gmail.com</p>
                 <div class="avisoPagamento">
                     <h3 style="color: #024da3;">ATENÇÃO:</h3>
                     <p>Só será aceito os pagamentos cujo comprovante for enviado para o WhatsApp: <u style="color: #024da3; font-weight: 700;">82 9636-5716</u> </p>
