Ajustando novo projeto

--- a/sistema-rifa/index.html
+++ b/sistema-rifa/index.html
@@ -6,7 +6,7 @@
     <title>Rifa - Escolha um Número</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">  <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap&family=Luckiest+Guy&display=swap" rel="stylesheet">  <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div id="customAlert" class="modal">
@@ -15,7 +15,7 @@
             <h2 id="modalTitle"></h2>
             <p id="modalMessage"></p>
             <div class="modal-actions">
-                <button id="confirmButtonAlert" class='confirmarModal' style=" background-color: #4A90E2; color: #fff;">Confirmar</button>
+                <button id="confirmButtonAlert" class='confirmarModal' style=" background-color: #E53935; color: #fff;">Confirmar</button>
             </div>
         </div>
     </div>
@@ -27,7 +27,7 @@
             <p id="modalMessageConfirm"></p>
             <div class="modal-actions">
                 <button id="cancelButton" class='cancelarModal' style=" background-color: #e73a3a; color: #fff; margin-right: 15px;">Cancelar</button>
-                <button id="confirmButtonConfirm" class='confirmarModal' style=" background-color: #4A90E2; color: #fff;">Confirmar</button>
+                <button id="confirmButtonConfirm" class='confirmarModal' style=" background-color: #43A047; color: #fff;">Confirmar</button>
             </div>
         </div>
     </div>
@@ -36,18 +36,18 @@
 
         <div  class="title">
 
-            <h1 class="titleSup">Rifa para casamento</h1>
-            <h1 class="titlePrincipal">Guilherme & Ivana</h1>
+
+            <h1 class="titlePrincipal">Rifa da Gincana Junina</h1>
         </div>
 
         <div class="subtitle">
             <div class="row">
                 <h3  class="rowTitle">Sorteio:</h3>
-                <p class="rowSubtitle">04/11/2024</p>
+                <p class="rowSubtitle">13/06/2025</p>
             </div>
             <div class="row">
                 <h3 class="rowTitle"> Prêmio:</h3>
-                <p class="rowSubtitle">Concorra a R$150,00</p>
+                <p class="rowSubtitle">Concorra a R$100,00</p>
             </div>
  
         </div>
@@ -76,10 +76,10 @@
             <div class="form-group">
                 <h2>PAGAMENTO</h2>
                 <p>Realize o pagamento através do pix:</p>
-                <p style="color: #024da3; font-weight: bold; text-align: center;">ajudeivanaeguiacasar@gmail.com</p>
+                <p style="color: #E53935; font-weight: bold; text-align: center;">ajudeivanaeguiacasar@gmail.com</p>
                 <div class="avisoPagamento">
-                    <h3 style="color: #024da3;">ATENÇÃO:</h3>
-                    <p>Só será aceito os pagamentos cujo comprovante for enviado para o WhatsApp: <u style="color: #024da3; font-weight: 700;">82 9636-5716</u> </p>
+                    <h3 style="color: #4E342E;">ATENÇÃO:</h3>
+                    <p>Só será aceito os pagamentos cujo comprovante for enviado para o WhatsApp: <u style="color: #E53935; font-weight: 700;">82 9636-5716</u> </p>
                 </div>
             </div>
             
