--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <p style="color: #E53935; font-weight: bold; text-align: center;">ajudeivanaeguiacasar@gmail.com</p>
                 <div class="avisoPagamento">
                     <h3 style="color: #4E342E;">ATENÇÃO:</h3>
-                    <p>Só será aceito os pagamentos cujo comprovante for enviado para o WhatsApp: <u style="color: #E53935; font-weight: 700;">82 9636-5716</u> </p>
+                    <p>Só serão aceitos os pagamentos cujo comprovante for enviado para o WhatsApp: <u style="color: #E53935; font-weight: 700;">82 9636-5716</u> </p>
                 </div>
             </div>
             
